Blender Grease Pencil Rim Effect Problem #60805

Closed
opened 2019-01-23 22:31:49 +01:00 by Sowechi Aguwa · 3 comments

Intel® Core™ i7-8650u CPU @1.90GHz 2.11 GHz

Ram: 16.0GB

System: 64-bit

Graphic Card GeForce GTX1060

Also tried with a different computer

Intel(R) Xeon(R) CPU E5-1650 v3 @3.50Hz

Ram:96gb

System: 64-bit

Graphic Card; NVIDA Quadro M6000 24gb

Blender Version

Broken:

(2.80, 84c06e996a, blender 2.80, 2019-01-14 19:48)

(2.80 dc3b5024be, blender 2.8, 2019-01-23)

Worked: (2.80, 84c06e996a, blender 2.80, 2019-01-14 19:48)

Short description of error

Hi, I'm in the process of creating a music video loop using blenders grease pencil to create a 3D scene. Problems started to arise once I started adding Rim effects to the grease pencil objects. Once the Rim effect is applied, some objects will flicker a lot while some other objects are fine, and sometimes it causes blender to crash. In certain cases I was not even able to re-open the file in question. Crashes mainly occurred during camera movement and play animation. I tried to delete the objects but the problem came back once I recreated them and attached the Rim effect. See attached file for further inspection. car.blend

car_noeffect.blend

Intel® Core™ i7-8650u CPU @1.90GHz 2.11 GHz Ram: 16.0GB System: 64-bit Graphic Card GeForce GTX1060 Also tried with a different computer Intel(R) Xeon(R) CPU E5-1650 v3 @3.50Hz Ram:96gb System: 64-bit Graphic Card; NVIDA Quadro M6000 24gb **Blender Version** Broken: (2.80, 84c06e996a7a, blender 2.80, 2019-01-14 19:48) (2.80 dc3b5024be1a, blender 2.8, 2019-01-23) Worked: (2.80, 84c06e996a7a, blender 2.80, 2019-01-14 19:48) **Short description of error** Hi, I'm in the process of creating a music video loop using blenders grease pencil to create a 3D scene. Problems started to arise once I started adding Rim effects to the grease pencil objects. Once the Rim effect is applied, some objects will flicker a lot while some other objects are fine, and sometimes it causes blender to crash. In certain cases I was not even able to re-open the file in question. Crashes mainly occurred during camera movement and play animation. I tried to delete the objects but the problem came back once I recreated them and attached the Rim effect. See attached file for further inspection. [car.blend](https://archive.blender.org/developer/F6382479/car.blend) [car_noeffect.blend](https://archive.blender.org/developer/F6382480/car_noeffect.blend)
Author

Added subscriber: @Swishtos

Added subscriber: @Swishtos
Antonio Vazquez self-assigned this 2019-01-24 10:27:42 +01:00

This issue was referenced by b3ba97ccce

This issue was referenced by b3ba97ccce2059b812ff8b14c430f9a29a9051e9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60805
No description provided.